charts/it-tools/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  labels:
    app: it-tools
