charts/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
  annotations:
    dev.orbstack.http-port: "80"
  labels:
    app: it-tools
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: it-tools
