charts/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  namespace: it-tools
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - it-tools.k8s.orb.local
  rules:
  - host: it-tools.k8s.orb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-tools
            port:
              number: 80
